--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -22,7 +22,6 @@ h1, h2, h3, h4, h5, h6
 h1
 	font-size: 4.0rem
 	line-height: 1.2
-	font-weight: 700
 	margin-bottom: $space-bottom
 	overflow: hidden
 
@@ -94,19 +93,12 @@ img
 
 b, strong, th
 	+font-bold
-//font-family: 'fontNameBold'
-//font-weight: normal
 
 i, em
 	+font-italic
-//font-family: 'fontNameItalic'
-//font-style: normal
 
 i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	+font-bold-italic
-//font-family: 'fontNameBoldItalic'
-//font-weight: normal
-//font-style: normal
 
 .mark
 	color: $color-text-mark
@@ -254,7 +246,7 @@ button
 			position: relative
 			display: inline-block
 			text-align: left
-			@include font-title
+			+font-title
 			color: $color-text-mark
 			content: counter(section)
 			padding: 0 4px 0 0
@@ -374,7 +366,7 @@ table
 
 		th,
 		thead td
-			@include font-bold
+			+font-bold
 			font-size: 1.6rem
 			text-align: left
 
@@ -565,7 +557,6 @@ textarea
 	white-space: nowrap
 
 .success-text
-	font-weight: bold
 	color: $color-form-success
 	padding: 0 0 20px
 	text-align: center
@@ -948,7 +939,7 @@ input[type="radio"]
 	select,
 	button.cselect,
 	button.cselect .select-inner
-		@include font-normal
+		+font-normal
 		font-size: 16px
 		line-height: 22px
 		text-transform: none
@@ -1063,13 +1054,11 @@ div.cselect
 	.ui-multiselect-checkboxes label
 		display: block
 		cursor: pointer
-		@include font-normal
-		font: 16px/22px 'Roboto', sans-serif
+		+font-normal
 		font-size: 16px
 		line-height: 22px
 		text-transform: none
 		color: $color-form-text
-		font-weight: normal
 		padding: 13px 18px
 		border: none
 		background-color: $color-form-bg
