--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -111,8 +111,7 @@
 	color: #000
 	margin: 0 0 20px
 
-	&__list,
-	.#{$user-content} &__list
+	&__list, .#{$user-content} &__list
 		overflow: hidden
 		list-style: none
 		padding: 0
