--- a/src/sass/base/_fonts.sass
+++ b/src/sass/base/_fonts.sass
@@ -1,4 +1,4 @@
-@import "mixins"
+@import "../utils/_mixins"
 
 // =============================================================================
 // Google Fonts
@@ -8,7 +8,7 @@
 // =============================================================================
 // Google Fonts
 // =============================================================================
-@include font-face("candara-regular", "../fonts/candara/regular/candara", normal, normal, eot woff ttf svg)
-@include font-face("candara-bold", "../fonts/candara/bold/candarab", normal, normal, eot woff ttf svg)
-@include font-face("candara-italic", "../fonts/candara/italic/candarai", normal, normal, eot woff ttf svg)
-@include font-face("candara-bold-italic", "../fonts/candara/bold-italic/candaraz", normal, normal, eot woff ttf svg)
++font-face("candara-regular", "../fonts/candara/regular/candara", normal, normal, eot woff ttf svg)
++font-face("candara-bold", "../fonts/candara/bold/candarab", normal, normal, eot woff ttf svg)
++font-face("candara-italic", "../fonts/candara/italic/candarai", normal, normal, eot woff ttf svg)
++font-face("candara-bold-italic", "../fonts/candara/bold-italic/candaraz", normal, normal, eot woff ttf svg)
