--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -88,6 +88,12 @@ $grid-space: 20px !default
     display: table
     clear: both
 
+/// Обрезает текст и добавляет троеточие
+=ellipsis()
+  white-space: nowrap
+  text-overflow: ellipsis
+  overflow: hidden
+
 // =============================================================================
 // Transform -vendor
 // =============================================================================
