--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -1,66 +1,66 @@
 /*LAYOUT*/
 .wrapper
-  margin: 0 auto
-  //min-height: 100%
-  //height: auto !important
-  //height: 100%
-  min-height: 100vh
-  overflow: hidden
-  position: relative
+	margin: 0 auto
+	//min-height: 100%
+	//height: auto !important
+	//height: 100%
+	min-height: 100vh
+	overflow: hidden
+	position: relative
 
 .main
-  padding: 30px 0 0
-  position: relative
-  clear: both
-  z-index: 4
+	padding: 30px 0 0
+	position: relative
+	clear: both
+	z-index: 4
 
 .main__holder
-  width: 100%
-  +clear
+	width: 100%
+	+clear
 
 .content-wrap
-  float: left
-  width: 100%
+	float: left
+	width: 100%
 
 .content
-  margin: 0 260px $bottom-space 340px
-  min-height: 50px
+	margin: 0 260px $bottom-space 340px
+	min-height: 50px
 
-  background-color: powderblue
+	background-color: whitesmoke
 
 .header
-  position: relative
-  z-index: 5
+	position: relative
+	z-index: 5
 
-  background-color: lightgreen
+	background-color: lightgreen
 
 .sidebar
-  display: inline
-  float: left
-  margin: 0 0 0 -100%
-  width: 320px
+	display: inline
+	float: left
+	margin: 0 0 0 -100%
+	width: 320px
 
-  background-color: sandybrown
+	background-color: sandybrown
 
 .aside
-  display: inline
-  float: right
-  margin: 0 0 0 -240px
-  width: 240px
+	display: inline
+	float: right
+	margin: 0 0 0 -240px
+	width: 240px
 
-  background-color: sandybrown
+	background-color: sandybrown
 
 .footer
-  margin: 0 auto
-  position: relative
-  clear: both
-  z-index: 5
+	margin: 0 auto
+	position: relative
+	clear: both
+	z-index: 5
 
-  background-color: lightgreen
+	background-color: lightgreen
 
 .layout
-  max-width: $layout-width
-  padding: 0 $layout-space-horizontal
-  margin: 0 auto
+	max-width: $layout-width
+	padding: 0 $layout-space-horizontal
+	margin: 0 auto
 
 /*LAYOUT end*/
