--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -227,7 +227,7 @@ button
 		width: 0
 		border: solid transparent
 		border-width: 5px 9px
-		border-left-color: $mark-color
+		border-left-color: $text-color-alt
 		box-sizing: border-box
 
 	//ul > li:first-child:before
@@ -246,7 +246,7 @@ button
 			display: inline-block
 			text-align: left
 			+font-title
-			color: $mark-color
+			color: $text-color-alt
 			content: counter(section)
 			padding: 0 4px 0 0
 			min-width: 30px
