--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -60,7 +60,8 @@
 
 .layout
 	max-width: $layout-width
-	padding: 0 $layout-space-horizontal
+	padding-left: $layout-space-horizontal
+	padding-right: $layout-space-horizontal
 	margin: 0 auto
 
 /*LAYOUT end*/
