--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -82,6 +82,7 @@ $grid-space: 20px !default
 /// Помощник для сброса внутреннего обтекания
 /// @author Николас Галлагер
 /// @link http://nicolasgallagher.com/micro-clearfix-hack/ Micro Clearfix
+///
 =clear()
 	&::after
 		content: ''
@@ -89,18 +90,339 @@ $grid-space: 20px !default
 		clear: both
 
 /// Обрезает текст и добавляет троеточие
-=ellipsis()
+///
+=truncate($truncation-boundary: 320px)
+	max-width: $truncation-boundary
 	white-space: nowrap
 	text-overflow: ellipsis
 	overflow: hidden
 
-// =============================================================================
-// Transform -vendor
-// =============================================================================
-=transform($param...)
-	-webkit-transform: $param
-	-ms-transform: $param
-	transform: $param
+/// Примесь позволяет определять `width` и `height` одновременно.
+///
+/// @author Hugo Giraudel
+///
+/// @access public
+///
+/// @param {Length} $width - `width` элемента
+/// @param {Length} $height ($width) - `height` элемента
+///
+/// @example Sass - Использование
+/// .foo
+///   +size(10em)
+///
+/// .bar
+///   +size(100%, 10em
+///
+/// @example css - Вывод CSS
+/// .foo {
+///   width: 10em;
+///   height: 10em;
+/// }
+///
+/// .bar {
+///   width: 100%;
+///   height: 10em;
+/// }
+///
+=size($width, $height: $width)
+	width: $width
+	height: $height
+
+/// Примесь добавляет горизонтальные внутренние отстпупы (`padding`) в развернутом виде.
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {Length} $left - левый `padding` элемента
+/// @param {Length} $right - правый `padding` элемента
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   +padding-horizontal(20px)
+///
+/// .foo
+///   +padding-horizontal(20px, 10px)
+///
+/// @example css - Вывод CSS
+///
+/// .foo {
+///   padding-left: 20px;
+///   padding-right: 20px;
+/// }
+///
+/// .foo {
+///   padding-left: 20px;
+///   padding-right: 10px;
+/// }
+///
+=padding-horizontal($left, $right: $left)
+	padding:
+		right: $right
+		left: $left
+
+/// Примесь добавляет вертикальные внутренние отстпупы (`padding`) в развернутом виде.
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {Length} $top - верхний `padding` элемента
+/// @param {Length} $bottom - нижний `padding` элемента
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   +padding-vertical(20px)
+///
+/// .foo
+///   +padding-vertical(20px, 10px)
+///
+/// @example css - Вывод CSS
+///
+/// .foo {
+///   padding-top: 20px;
+///   padding-bottom: 20px;
+/// }
+///
+/// .foo {
+///   padding-top: 20px;
+///   padding-bottom: 10px;
+/// }
+///
+=padding-vertical($top, $bottom:$top)
+	padding:
+		top: $top
+		bottom: $bottom
+
+/// Примесь добавляет горизонтальные внешние отстпупы (`margin`) в развернутом виде.
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {Length} $left - левый `margin` элемента
+/// @param {Length} $right - правый `margin` элемента
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   +margin-horizontal(20px)
+///
+/// .foo
+///   +margin-horizontal(20px, 10px)
+///
+/// @example css - Вывод CSS
+///
+/// .foo {
+///   margin-left: 20px;
+///   margin-right: 20px;
+/// }
+///
+/// .foo {
+///   margin-left: 20px;
+///   margin-right: 10px;
+/// }
+///
+=margin-horizontal($left, $right: $left)
+	margin:
+		right: $right
+		left: $left
+
+/// Примесь добавляет вертикальные внешние отстпупы (`margin`) в развернутом виде.
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {Length} $top - верхний `margin` элемента
+/// @param {Length} $bottom - нижний `margin` элемента
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   +margin-vertical(20px)
+///
+/// .foo
+///   +margin-vertical(20px, 10px)
+///
+/// @example css - Вывод CSS
+///
+/// .foo {
+///   margin-top: 20px;
+///   margin-bottom: 20px;
+/// }
+///
+/// .foo {
+///   margin-top: 20px;
+///   margin-bottom: 10px;
+/// }
+///
+=margin-vertical($top, $bottom:$top)
+	margin:
+		top: $top
+		bottom: $bottom
+
+/// Примесь центрирует блочный элемент с ограниченной шириной.
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   +push-auto
+///
+/// @example css - Вывод CSS
+///
+/// .foo {
+///   margin-left: auto;
+///   margin-right: auto;
+/// }
+///
+=push-auto()
+	margin:
+		left: auto
+		right: auto
+
+/// Примесь добавляет к псевдоэлементу базовые свойства.
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {String} $content [''] - контент псевдоэлемента
+/// @param {String} $display [block] - тип псевдоэлемента
+/// @param {String} $pos [absolute] - позицирование псевдоэлемента
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   &::before
+///     +pseudo()
+///
+/// .foo
+///   &::before
+///     +pseudo(attr(data), inline-block, relative)
+///
+/// @example css - Вывод CSS
+///
+/// .foo::before {
+///   content: '';
+///   display: block;
+///   position: absolute;
+/// }
+///
+/// .foo::before {
+///   content: attr(data);
+///   display: inline-block;
+///   position: relative;
+/// }
+///
+=pseudo($content: '', $display: block, $pos: absolute)
+	content: $content
+	display: $display
+	position: $pos
+
+/// Примесь позволяет сохранять пропорции элементов при респонсиве
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {Number} $x [1] - ширина в пропорциональном соотношении
+/// @param {Number} $y [1] - высота в пропорциональном соотношении
+/// @param {Boolean} $pseudo [false] - указывает добавлять псевдоэлемент или
+/// использовать `padding` самого элемента
+///
+/// @example Sass - Использование
+///
+/// .foo
+///   +responsive-ratio(1)
+///
+/// .foo
+///   +responsive-ratio(16, 9)
+///
+/// .foo
+///   +responsive-ratio(4, 3, true)
+///
+/// @example css - Вывод CSS
+///
+/// .foo {
+///   padding-top: 100%
+/// }
+///
+/// .foo {
+///   padding-top: 56.25%
+/// }
+///
+/// .foo::before {
+///   content: "";
+///   display: block;
+///   position: relative;
+///   height: 0;
+///   width: 100%;
+///   padding-top: 75%;
+/// }
+///
+=ratio($x: 1, $y: 1, $pseudo: false, $overflow: hidden)
+	$padding: ($y / $x * 100%)
+
+	@if $pseudo
+
+		&::before
+			+pseudo($pos: relative)
+
+			height: 0
+			width: 100%
+			padding-top: $padding
+	@else
+		padding-top: $padding
+
+/// Примесь позволяет указывает изображению способ заполнения блока,
+/// в котором находится
+/// Для ie9 необходимо подключить скрипт и прописать дополнительные свойства
+/// @link https://medium.com/@primozcigler/neat-trick-for-css-object-fit-fallback-on-edge-and-other-browsers-afbc53bbb2c3#.e3eu6mvxl
+///
+/// @author Astronim*
+///
+/// @access public
+///
+/// @param {String} $fit [cover] - метод заполнения
+///
+/// @example Sass - Использование
+///
+/// img.foo
+///   +object-fit($fit: contain)
+///
+/// @example css - Вывод CSS
+///
+/// img.foo {
+///   position: relative
+///   top: 50%
+///   left: 50%
+///   max-width: none
+///   width: auto
+///   min-width: 100%
+///   min-height: 100%
+///   transform: translate(-50%, -50%)
+///   object-fit: $fit
+/// }
+///
+=object-fit($fit: cover)
+	position: relative
+	top: 50%
+	left: 50%
+	max-width: none
+	width: auto
+	min-width: 100%
+	min-height: 100%
+	transform: translate(-50%, -50%)
+	object-fit: $fit
+
+
 
 // =============================================================================
 // Hide text for screen reader
@@ -139,7 +461,7 @@ $grid-space: 20px !default
 // =============================================================================
 =btn-active()
 	&:active
-		+transform(scale(0.95))
+		transform: scale(0.95)
 
 // =============================================================================
 // Leaner gradient -vendor
@@ -149,6 +471,7 @@ $grid-space: 20px !default
 /// @param {Number} $value - Value to convert
 /// @param {String} $unit - Unit to convert to
 /// @return {Number} Converted angle
+///
 @function convert-angle($value, $unit)
 	$convertable-units: deg grad turn rad
 	$conversion-factors: 1 (10grad / 9deg) (1turn / 360deg) (3.14159rad / 180deg)
@@ -161,6 +484,7 @@ $grid-space: 20px !default
 /// Test if `$value` is an angle
 /// @param {*} $value - Value to test
 /// @return {Bool}
+///
 @function is-direction($value)
 	$is-direction: index((to top, to top right, to right top, to right, to bottom right, to right bottom, to bottom, to bottom left, to left bottom, to left, to left top, to top left), $value)
 	$is-angle: type-of($value) == "number" and index("deg" "grad" "turn" "rad", unit($value))
@@ -171,6 +495,7 @@ $grid-space: 20px !default
 /// @param {Keyword | Angle} $value - Value to convert
 /// @require {function} is-direction
 /// @require {function} convert-angle
+///
 @function legacy-direction($value)
 	@if is-direction($value) == false
 		@warn "Cannot convert `#{$value}` to legacy syntax because it doesn't seem to be an angle or a direction"
@@ -188,6 +513,7 @@ $grid-space: 20px !default
 /// @access public
 /// @param {String | List | Angle} $direction - Linear gradient direction
 /// @param {Arglist} $color-stops - List of color-stops composing the gradient
+///
 =linear-gradient($direction, $color-stops...)
 	@if is-direction($direction) == false
 		$color-stops: $direction, $color-stops
