--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -549,7 +549,7 @@ textarea
 	height: 1.8em
 	width: 100%
 	margin-bottom: -1.8em
-	+ellipsis
+	+truncate
 
 .success-text
 	color: $color-form-success
@@ -1011,7 +1011,7 @@ input[type="radio"]
 
 		.select-text
 			display: block
-			+ellipsis
+			+truncate
 			min-height: 20px
 
 /*multiselect menu*/
