--- a/src/sass/components/_breadcrumbs.sass
+++ b/src/sass/components/_breadcrumbs.sass
@@ -46,7 +46,7 @@
 				vertical-align: top
 				line-height: 1.2
 				max-width: 260px
-				+ellipsis
+				+truncate
 
 		a
 			display: inline-block
