--- a/src/sass/utils/_functions.sass
+++ b/src/sass/utils/_functions.sass
@@ -49,7 +49,7 @@
 // =============================================================================
 // strip-unit
 // =============================================================================
-/// Примесь обрезает единицы измерения, возвращая толко число
+/// Фунция обрезает единицы измерения, возвращая толко число
 /// Remove the unit of a length
 /// @param {Number} $number - Number to remove unit from
 /// @return {Number} - Unitless number
