--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -14,8 +14,6 @@
 // =============================================================================
 /// Примесь позволяет определять `width` и `height` одновременно.
 ///
-/// @author Hugo Giraudel
-///
 /// @param {Length} $width - `width` элемента
 /// @param {Length} $height ($width) - `height` элемента
 ///
@@ -36,10 +34,33 @@
 ///   width: 100%;
 ///   height: 10em;
 /// }
-///
+
 =size($width, $height: $width)
 	width: $width
 	height: $height
+
+// =============================================================================
+// font
+// =============================================================================
+/// Примесь добавляет одновремменно `font-size` и `line-height`
+/// Используются переменный `$font-size` и `$line-height`
+///
+/// @param {Length} $width - `width` элемента
+/// @param {Length} $height ($width) - `height` элемента
+///
+/// @example Sass - Использование
+/// .foo
+///   +font(1.4rem, 1.5)
+///
+/// @example css - Вывод CSS
+/// .foo {
+///   font-size: 1.4rem;
+///   line-height: 1.5;
+/// }
+
+=font($font-size: $font-size, $line-height: $line-height)
+	font-size: $font-size
+	line-height: $line-height
 
 // =============================================================================
 // pseudo
